--- a/static/styles.css
+++ b/static/styles.css
@@ -108,6 +108,7 @@ body {
     padding: 1rem;
     width: 200px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    text-align: center;
 }
 
 .item-card h2 {
@@ -315,7 +316,7 @@ ul li {
 
 button {
     background-color: #ff9800;
-    color: white;
+    color: black;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
@@ -323,4 +324,63 @@ button {
 
 button:hover {
     background-color: #ffb74d;
+}
+
+.see-more {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+.see-more:hover {
+    background-color: #0056b3;
+}
+
+footer {
+    position: relative;
+    padding: 10px;
+}
+
+.update-info {
+    text-align: right;
+    font-size: 12px; /* Adjust size if needed */
+    margin: 10px;
+    color: #555; /* Optional: change color to match your design */
+}
+
+.footer {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.footer small {
+    color: #999;
+}
+
+.developer-profile {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.developer-profile img {
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+    margin-right: 20px;
+}
+
+.developer-profile h3 {
+    margin: 0;
+    font-size: 24px;
+}
+
+.developer-profile p {
+    margin: 5px 0 0;
 }
