Change percentage colour

--- a/templates/product.html
+++ b/templates/product.html
@@ -200,7 +200,7 @@
         <header class="product-header">
             <div>
                 <h1>{{ product['name'] }}</h1>
-                <h2 id="state-name">{{ product['state'] }} <span style="color: #0f0;">({{ product['price_change']
+                <h2 id="state-name">{{ product['state'] }} <span style="color: rgb(74, 201, 74);">({{ product['price_change']
                         }})</span></h2>
             </div>
             <div>
